# maks

./: CMakeLists.txt  LICENSE  README.md  install.sh
data/: burghers.g2o  car.g2o  cycle100_0.5_SO3.g2o  cycle200_0.5_SO3.g2o  cycle20_0.5_SO3.g2o  cycle50_0.5_SO3.g2o  drone.g2o  lounge.g2o  parking-garage_SO3.g2o  smallGrid3D_SO3.g2o  stonewall.g2o
include/: err.hpp  internal.hpp  io.hpp  krylov.hpp  linalg.hpp  posegraph.hpp  ravg.hpp
matlab/: example_posegraph.m  example_sfm.m  graph_example.m  posegraph_example.m
matlab/3d/: computePose.m  epipolarGeometry.m  epipolarRansac.m  intrinsicsMatrix.m  projectionMatrix.m  ransac3D.m  triangulate.m
matlab/@Matcha/: Matcha.m  at.m  computeDogExtrema.m  computeFeatures.m  computeOrientations.m  computePyramid.m  filterEdges.m  fitQuadratic.m  gaussianKernel.m  interpolateExtrema.m  interpolatePoint.m  isEdge.m  load.m  match.m  setDefaultParams.m  showExtrema.m
matlab/@Posegraph/: Posegraph.m  addEdge.m  addNode.m  adjacency.m  clear.m  configEdges.m  configNodes.m  containsEdge.m  containsNode.m  degree.m  fiedler.m  isConnected.m  laplacian.m  nodeOp.m  subsref.m
matlab/clouds/: cloudCutoff.m  cloudDownsample.m  cloudMerge.m  cloudSetColor.m  cloudTransform.m
matlab/geo/: angleAxisToRot.m  generalProcrustes.m  noisifyRotations.m  quatToRot.m  rotToQuat.m  rotrnd.m  rotx.m  roty.m  rotz.m
matlab/graphix/: plotCam.m  plotCamCycle.m  plotCloud.m  showAnaglyph.m  showMatches.m  showSideBySide.m
src/: err.cpp  internal.cpp  io.cpp  krylov.cpp  linalg.cpp  maks.cpp  posegraph.cpp  ravess_example.cpp  ravg.cpp
(+17 files in other folders)
